--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
