--- a/package.json
+++ b/package.json
@@ -24,22 +24,29 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.486.0",
     "mongoose": "^8.13.2",
+    "multer": "^1.4.5-lts.2",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
+    "pdf2json": "^3.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
