--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
+    "@huggingface/inference": "^3.9.2",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -29,6 +31,7 @@
     "lucide-react": "^0.486.0",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
+    "natural": "^8.0.1",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
