--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.1.5",
+    "pdfjs-dist": "^5.2.133",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-pdf": "^9.2.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5",
