feat: update settings structure and improve settings handling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "./types"
-  ],
-  "exclude": ["node_modules"]
+, "script.ts"  ],
+  "exclude": ["node_modules"],
 }
