--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-pdf": "^9.2.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
